chore: fixed grammar v1.0.1

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </main>
     <section class="sobre">
         <p>
-            Nasci no Espírito Santo, porém atualmente moro em Santa Catarina. Apesar de ter iniciado a carreira profissional na indústria, encontrei minha verdadeira paixão e vocação na área de desenvolvimento. <br>Mesmo assim, vejo como essencial estudar outras coisas, além da parte técnica. Por isso, busco praticar exercícios físicos e estou sempre estudando temas como hábitos, marketing, desenvolvimento pessoal, filosofia, economia, neurociência entre outros.
+            Nasci no Espírito Santo, porém, atualmente moro em Santa Catarina. Apesar de ter iniciado a carreira profissional na indústria, encontrei minha verdadeira paixão e vocação na área de desenvolvimento. <br>Mesmo assim, vejo como essencial estudar outras coisas, além da parte técnica. Por isso, busco praticar exercícios físicos e estou sempre estudando temas como hábitos, marketing, desenvolvimento pessoal, filosofia, economia, neurociência entre outros.
             <br>Entendi que ter um corpo saudável melhora a cognição, o trabalho e, consequentemente, a vida. Então, busco ter uma rotina equilibrada e organizada para maximizar meu desempenho.
         </p>
     </section>
